Added support for processing .csproj files without Visual Studio Bridge.
Changed settings serialization format to json. Note: probably this will be changed again.
Old configuration file can be deleted. Old settings are not transferred automatically.

--- a/Editor/Silvers.CsharpProjectTools.Editor.asmdef
+++ b/Editor/Silvers.CsharpProjectTools.Editor.asmdef
@@ -6,5 +6,10 @@
         "Editor"
     ],
     "excludePlatforms": [],
-    "allowUnsafeCode": false
+    "allowUnsafeCode": false,
+    "overrideReferences": true,
+    "precompiledReferences": [],
+    "autoReferenced": false,
+    "defineConstraints": [],
+    "versionDefines": []
 }
