--- a/Editor.Test/Silvers.CsharpProjectTools.Editor.Test.asmdef
+++ b/Editor.Test/Silvers.CsharpProjectTools.Editor.Test.asmdef
@@ -1,7 +1,7 @@
 {
     "name": "Silvers.CsharpProjectTools.Editor.Test",
     "references": [
-        "Silvers.CsharpProjectTools.Editor"
+        "GUID:34a123a2c90197a41936f7affc35ac63"
     ],
     "optionalUnityReferences": [
         "TestAssemblies"
@@ -10,5 +10,10 @@
         "Editor"
     ],
     "excludePlatforms": [],
-    "allowUnsafeCode": false
+    "allowUnsafeCode": false,
+    "overrideReferences": true,
+    "precompiledReferences": [],
+    "autoReferenced": false,
+    "defineConstraints": [],
+    "versionDefines": []
 }
